--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_svg: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +60,16 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/user_photo.webp
+    - assets/images/right_arrow_icon.svg
+    - assets/images/sber_icon.svg
+    - assets/images/close_icon.svg
+    - assets/images/exit_icon.svg
+    - assets/images/indicator_icon.svg
+    - assets/images/percent_icon.svg
+    - assets/images/percent_round_icon.svg
+    - assets/images/transfer_icon.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
